Fix bug where gravatar image appeared stretched after login before refreshing page

--- a/app/assets/stylesheets/refills/_navigation.scss
+++ b/app/assets/stylesheets/refills/_navigation.scss
@@ -400,7 +400,7 @@ header.navigation {
     // right: 10px;
     // width: 2em;
     // height: 2em;
-    height: 100%;
+    height: 34px;
     width: 34px;
   }
 
